generated/checkers/refine/KN-Integer-Overflow-768f17fd-0/build_logs/syntax-repair-refine-1-2/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isAnyLongType(clang::QualType)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:105:16: error: ‘const class clang::Type’ has no member named ‘isSignedLongType’; did you mean ‘isSignedIntegerType’?
  105 |     return QT->isSignedLongType() || QT->isUnsignedLongType();
      |                ^~~~~~~~~~~~~~~~
      |                isSignedIntegerType
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:105:42: error: ‘const class clang::Type’ has no member named ‘isUnsignedLongType’; did you mean ‘isUnsignedIntegerType’?
  105 |     return QT->isSignedLongType() || QT->isUnsignedLongType();
      |                                          ^~~~~~~~~~~~~~~~~~
      |                                          isUnsignedIntegerType
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isFixed64Builtin(clang::QualType)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:110:16: error: ‘const class clang::Type’ has no member named ‘isLongLongType’; did you mean ‘isUnionType’?
  110 |     return QT->isLongLongType() || QT->isUnsignedLongLongType();
      |                ^~~~~~~~~~~~~~
      |                isUnionType
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:110:40: error: ‘const class clang::Type’ has no member named ‘isUnsignedLongLongType’; did you mean ‘isUnsignedIntegerType’?
  110 |     return QT->isLongLongType() || QT->isUnsignedLongLongType();
      |                                        ^~~~~~~~~~~~~~~~~~~~~~
      |                                        isUnsignedIntegerType
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
